--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="intro">
         <h1>Hello, my name is <a class="emphasis">Kevin Liang.</a></h1>
         <h1>
-          <a class="typewrite" data-period="2000" data-type='[ "I love Coding.", "I love Designing.", "I Love Learning.", "I Love Innovating.", "I Love Everything." ]'>
+          <a class="typewrite" data-period="2000" data-type='[ "I love Coding.", "I love Designing.", "I love Learning.", "I love Innovating.", "I love Everything." ]'>
             <span class="wrap"></span>
           </a>
         </h1>
