--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="resources/home.css" type="text/css" rel="stylesheet" />
 <!-- <script src="path/to/dist/feather.js"></script> -->
 <script src="js/script.js"></script>
+<script src="js/animation.js"></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
         </h1>
       </div>
       <div class="projects">
-        <h2>My Projects</h2>
+        <p id="bg-title">Projects</p>
       </div>
     </div>
 
