--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link href="resources/style.css" type="text/css" rel="stylesheet" />
 <link href="resources/base.css" type="text/css" rel="stylesheet" />
-<link href="resources/home.css" type="text/css" rel="stylesheet" />
+<link href="resources/animation.css" type="text/css" rel="stylesheet" />
 <!-- <script src="path/to/dist/feather.js"></script> -->
 <script src="js/script.js"></script>
 <script src="js/animation.js"></script>
@@ -30,9 +30,9 @@
     <div class="main">
       <div class="bg-image"></div>
       <div class="intro">
-        <h1>Hello, my name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
+        <h1 class="fade-in-fast">Hello, my name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
         <h1>
-          <a class="typewrite" data-period="2000" data-type='[ "I love Coding.", "I love Designing.", "I love Learning.", "I love Innovating.", "I love Everything." ]'>
+          <a class="typewrite fade-in-med" data-period="2000" data-type='[ "I love Coding.", "I love Designing.", "I love Learning.", "I love Innovating.", "I love Everything." ]'>
             <span class="wrap"></span>
           </a>
         </h1>
