--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main">
       <div class="bg-image"></div>
       <div class="intro">
-        <h1 class="fade-in-fast">Hello, my name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
+        <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
         <h1>
           <a class="typewrite fade-in-med" data-period="2000" data-type='[ "I love Coding.", "I love Designing.", "I love Learning.", "I love Innovating.", "I love Everything." ]'>
             <span class="wrap"></span>
