--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <!-- Front Page -->
 
     <div class="main">
-      <div class="bg-image"></div>
+      <div class="image-wrapper">
+        <div class="bg-image"></div>
+      </div>
       <div class="intro">
         <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
         <h1>
