--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
       <div class="intro">
         <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
         <h1>
-          <a class="typewrite fade-in-med" data-period="2000" data-type='[ "I love Coding.", "I love Designing.", "I love Learning.", "I love Innovating.", "I love Everything." ]'>
+          <a class="typewrite fade-in-med" data-period="2000" data-type='[ "I love coding.", "I love designing.", "I love learning.", "I love innovating.", "I love everything." ]'>
             <span class="wrap"></span>
           </a>
         </h1>
       </div>
       <div class="projects">
         <p id="bg-title">Projects</p>
+        <div class="container-wrapper">
+
+        </div>
       </div>
     </div>
 
