--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
       <div class="projects">
         <p id="bg-title">Projects</p>
         <div class="container-wrapper">
+            <div class="project-box-l">
 
+            </div>
+            <div class="project-box-r">
+
+            </div>
+            <div class="project-box-l">
+
+            </div>
+            <div class="project-box-r">
+
+            </div>
         </div>
       </div>
     </div>
