--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
 <body>
   <div class="container">
 
+    <div class="infomenu" id="infomenu">
+      <div class="image-wrapper">
+        <div class="info-background info-fade"></div>
+      </div>
+      <div class="info-text fade-in-fast">
+        <h2><a href="https://www.linkedin.com/in/kevin-liang-32b9791aa/" target="_blank">LinkedIn</a></h2>
+        <h2><a href="https://www.instagram.com/keviniang/" target="_blank">Instagram</a></h2>
+        <h2><a href="https://www.facebook.com/" target="_blank">Facebook</a></h2>
+        <h2><a href="https://devpost.com/Sanbroh" target="_blank">Devpost</a></h2>
+        <h2><a href="https://github.com/Sanbroh" target="_blank">GitHub</a></h2>
+      </div>
+      <div class="info-exit">
+        <i id="infoexit" class="material-icons lighter" onclick="toggleMenuOff()">close</i>
+      </div>
+    </div>
+
     <!-- Header -->
 
     <header>
       <div class="topnav fixed">
-        <i id="navmenu" class="material-icons lighter">menu</i>
+        <i id="navmenu" class="material-icons lighter" onclick="toggleMenuOn()">menu</i>
         <h1 id="navtext" class="lighter">Welcome</h1>
         <i id="to-contact" class="material-icons lighter">mail_outline</i>
       </div>
@@ -64,6 +80,7 @@
 
     <a onclick="topFunction()" id="to-top" class="material-icons lighter">vertical_align_top</a>
 
+  </div>
 </body>
 
 </html>
