Adjusted sizes, added projects

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
   <div class="container">
 
+    <!-- Toggle Menu -->
+
     <div class="infomenu" id="infomenu">
       <div class="image-wrapper">
         <div class="info-background info-fade"></div>
@@ -55,20 +57,35 @@
           </a>
         </h1>
       </div>
-      <div class="projects">
+      <div class="background-text">
         <p id="bg-title">Projects</p>
+      </div>
+      <div class="projects">
         <div class="container-wrapper">
-            <div class="project-box-l">
-
+            <div class="project-box left">
+              <div class="project-bg">
+                <div class="project-image"></div>
+                <div class="project-text">
+                  <h3>Project 1</h3>
+                  <p class="lighter">2020.01.20</p>
+                  <p>asjrk asklejasl jraskljs ajklr jaskrj alrj aslrjska lrj aklr jaslr jaslr jajr ajraljsal rjjal</p>
+                </div>
+              </div>
             </div>
-            <div class="project-box-r">
-
+            <div class="project-box right">
+              <div class="project-bg">
+                <div class="project-image"></div>
+              </div>
             </div>
-            <div class="project-box-l">
-
+            <div class="project-box left">
+              <div class="project-bg">
+                <div class="project-image"></div>
+              </div>
             </div>
-            <div class="project-box-r">
-
+            <div class="project-box right">
+              <div class="project-bg">
+                <div class="project-image"></div>
+              </div>
             </div>
         </div>
       </div>
