--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="project-image"></div>
                 <div class="project-text">
                   <h3>Project 1</h3>
-                  <p class="lighter">2020.01.20</p>
+                  <h4 class="lighter">2020.01.20</h4>
                   <p>asjrk asklejasl jraskljs ajklr jaskrj alrj aslrjska lrj aklr jaslr jaslr jajr ajraljsal rjjal</p>
                 </div>
               </div>
