altered for mobile formatting, added project 1 (sort of)

--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
         <div class="container-wrapper">
             <div class="project-box left">
               <div class="project-bg">
-                <div class="project-image"></div>
+                <div class="project-image" id="project-1"></div>
                 <div class="project-text">
-                  <h3>Project 1</h3>
+                  <h3>Project 1 <span class="Subtitle">(HTML/CSS/JavaScript)</span></h3>
                   <h4 class="lighter">2020.01.20</h4>
                   <p>asjrk asklejasl jraskljs ajklr jaskrj alrj aslrjska lrj aklr jaslr jaslr jajr ajraljsal rjjal</p>
+                  <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
               </div>
             </div>
