Finalized projects page, enhanced for mobile.

--- a/index.html
+++ b/index.html
@@ -66,26 +66,44 @@
               <div class="project-bg">
                 <div class="project-image" id="project-1"></div>
                 <div class="project-text">
-                  <h3>Project 1 <span class="Subtitle">(HTML/CSS/JavaScript)</span></h3>
-                  <h4 class="lighter">2020.01.20</h4>
-                  <p>asjrk asklejasl jraskljs ajklr jaskrj alrj aslrjska lrj aklr jaslr jaslr jajr ajraljsal rjjal</p>
+                  <h3>Coffii <span class="Subtitle">(QHacks 2021)</span></h3>
+                  <h4 class="bolder">HTML | CSS | JavaScript</h4>
+                  <p>Coffii is a web application that simulates the feeling of sitting inside your favourite coffee shops, restaurants, and public places.</p>
                   <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
               </div>
             </div>
             <div class="project-box right">
               <div class="project-bg">
-                <div class="project-image"></div>
+                <div class="project-image" id="project-2"></div>
+                <div class="project-text">
+                  <h3>Loco <span class="Subtitle">(QTMA 2021)</span></h3>
+                  <h4 class="bolder">React Native | Firebase</h4>
+                  <p>Loco is a mobile application that makes tourism easy by giving new entertainment, food, and other unique recommendations to users.</p>
+                  <div class="project-button"><a href="">Visit Project »</a></div>
+                </div>
               </div>
             </div>
             <div class="project-box left">
               <div class="project-bg">
-                <div class="project-image"></div>
+                <div class="project-image" id="project-3"></div>
+                <div class="project-text">
+                  <h3>Hyperloop Pod Chassis <span class="Subtitle">(QHDT 2022)</span></h3>
+                  <h4 class="bolder">Autodesk CAD</h4>
+                  <p>Chassis of the QHDT Pod that competed in the Canadian Hyperloop Competition at the University of Waterloo.</p>
+                  <div class="project-button"><a href="">Visit Project »</a></div>
+                </div>
               </div>
             </div>
             <div class="project-box right">
               <div class="project-bg">
-                <div class="project-image"></div>
+                <div class="project-image" id="project-4"></div>
+                <div class="project-text">
+                  <h3>Uber Eats Optimization <span class="Subtitle">(APSC200 P2)</span></h3>
+                  <h4 class="bolder">MatLab</h4>
+                  <p>Optimization of Uber Eats services in Kingston, Ontario. Used Lloyd's Algorithm to distribute drivers to best service clients.</p>
+                  <div class="project-button"><a href="">Visit Project »</a></div>
+                </div>
               </div>
             </div>
         </div>
