Mobile Adjustments again

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       <div class="image-wrapper">
         <div class="info-background info-fade"></div>
       </div>
+      <div class="info-nav">
+        <h3>Navigation</h3>
+        <hr>
+        <div class="info-nav-item">
+          <h4 class="lighter">Welcome</h4>
+          <h4 class="lighter">Projects</h4>
+          <h4 class="lighter">About Me</h4>
+          <h4 class="lighter">Contact Me</h4>
+        </div>
+      </div>
       <div class="info-text fade-in-fast">
         <h2><a href="https://www.linkedin.com/in/kevin-liang-32b9791aa/" target="_blank">LinkedIn</a></h2>
         <h2><a href="https://www.instagram.com/keviniang/" target="_blank">Instagram</a></h2>
@@ -114,7 +124,7 @@
 
     </div>
 
-    <a onclick="topFunction()" id="to-top" class="material-icons lighter">vertical_align_top</a>
+    <i onclick="topFunction()" id="to-top" class="material-icons lighter">vertical_align_top</i>
 
   </div>
 </body>
