Final code for projects and optimization

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="image-wrapper">
         <div class="info-background info-fade"></div>
       </div>
-      <div class="info-nav">
+      <div class="info-nav fade-in-fast">
         <h3>Navigation</h3>
         <hr>
         <div class="info-nav-item">
