optimized for mobile, tablet, and pc

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
               <div class="project-bg">
                 <div class="project-image" id="project-4"></div>
                 <div class="project-text">
-                  <h3>Uber Eats Optimization <span class="Subtitle">(APSC200 P2)</span></h3>
-                  <h4 class="bolder">MatLab</h4>
-                  <p>Optimization of Uber Eats services in Kingston, Ontario. Used Lloyd's Algorithm to distribute drivers to best service clients.</p>
+                  <h3>Design Project <span class="Subtitle">(APSC200)</span></h3>
+                  <h4 class="bolder">MATLAB</h4>
+                  <p>Optimization of Uber Eats services in Kingston, Ontario. Used Lloyd's Algorithm to allocate drivers.</p>
                   <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
               </div>
