Added more projects section with buttons but unlinked

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="main">
       <div class="image-wrapper">
-        <div class="bg-image"></div>
+        <div class="bg-image bg-image-main"></div>
       </div>
       <div class="intro">
         <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
@@ -99,7 +99,7 @@
                 <div class="project-image" id="project-3"></div>
                 <div class="project-text">
                   <h3>Hyperloop Pod Chassis <span class="Subtitle">(QHDT 2022)</span></h3>
-                  <h4 class="bolder">Autodesk CAD</h4>
+                  <h4 class="bolder">SolidWorks CAD</h4>
                   <p>Chassis of the QHDT Pod that competed in the Canadian Hyperloop Competition at the University of Waterloo.</p>
                   <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
@@ -111,9 +111,17 @@
                 <div class="project-text">
                   <h3>Design Project <span class="Subtitle">(APSC200)</span></h3>
                   <h4 class="bolder">MATLAB</h4>
-                  <p>Optimization of Uber Eats services in Kingston, Ontario. Used Lloyd's Algorithm to allocate drivers.</p>
+                  <p>Optimization of Uber Eats services in Kingston, Ontario. Uses Lloyd's Algorithm to allocate drivers.</p>
                   <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
+              </div>
+            </div>
+            <div class="project-more">
+              <h2>More Projects</h2>
+              <div class="project-more-buttons">
+                <h3 href="">GitHub</h3>
+                <h3 href="">Devpost</h3>
+                <h3 href="">ArtStation</h3>
               </div>
             </div>
         </div>
