Added ABOUT section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="info-nav-item">
           <h4 class="lighter">Welcome</h4>
           <h4 class="lighter">Projects</h4>
-          <h4 class="lighter">About Me</h4>
+          <h4 class="lighter">About</h4>
           <h4 class="lighter">Contact Me</h4>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <div class="bg-image bg-image-main"></div>
       </div>
       <div class="intro">
-        <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" href="#">Kevin Liang.</a></h1>
+        <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" onclick="goToMe()">Kevin Liang.</a></h1>
         <h1>
           <a class="typewrite fade-in-med" data-period="2000" data-type='[ "I love coding.", "I love designing.", "I love learning.", "I love innovating.", "I love everything." ]'>
             <span class="wrap"></span>
@@ -124,6 +124,28 @@
                 <h3 href="">ArtStation</h3>
               </div>
             </div>
+        </div>
+      </div>
+      <div class="about-me">
+        <div class="left-box">
+          <div class="portrait"></div>
+        </div>
+        <div class="right-box">
+          <div class="about-text">
+            <h1>Hi, I'm Kevin.</h1>
+            <h2>I am open to work!</h2>
+            <hr>
+            <ul class="lighter">
+              <li>Currently a 2nd year student at <a>Queen's University</a> in Kingston, Ontario, Canada</li>
+              <li>Majoring in <a>Mathematics and Engineering</a> with an option in Systems and Robotics</li>
+              <li>Have strong interests in <a>Software Development</a>, <a>Computer Hardware Engineering</a> and <a>Data Science</a></li>
+            </ul>
+          </div>
+          <div class="about-buttons">
+            <div class="about-button"><a href="">GitHub</a></div>
+            <div class="about-button"><a href="">Devpost</a></div>
+            <div class="about-button"><a href="">Résumé ▼</a></div>
+          </div>
         </div>
       </div>
     </div>
