Fixed Links and added Resume

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
             <div class="project-more">
               <h2>More Projects</h2>
               <div class="project-more-buttons">
-                <h3 href="">GitHub</h3>
-                <h3 href="">Devpost</h3>
-                <h3 href="">ArtStation</h3>
+                <a href="https://github.com/Sanbroh" target="_blank"><h3>GitHub</h3></a>
+                <a href="https://devpost.com/Sanbroh" target="_blank"><h3>Devpost</h3></a>
+                <a><h3>ArtStation</h3></a>
               </div>
             </div>
         </div>
@@ -136,15 +136,15 @@
             <h2>I am open to work!</h2>
             <hr>
             <ul class="lighter">
-              <li>Currently a 2nd year student at <a>Queen's University</a> in Kingston, Ontario, Canada</li>
-              <li>Majoring in <a>Mathematics and Engineering</a> with an option in Systems and Robotics</li>
+              <li>Currently a 2nd year student at <a href="https://www.queensu.ca/" target="_blank">Queen's University</a> in Kingston, Ontario, Canada</li>
+              <li>Majoring in <a href="https://www.queensu.ca/mathstat/undergraduate/prospective-undergraduate/mthe" target="_blank">Mathematics and Engineering</a> with an option in Systems and Robotics</li>
               <li>Have strong interests in <a>Software Development</a>, <a>Computer Hardware Engineering</a> and <a>Data Science</a></li>
             </ul>
           </div>
           <div class="about-buttons">
-            <div class="about-button"><a href="">GitHub</a></div>
-            <div class="about-button"><a href="">Devpost</a></div>
-            <div class="about-button"><a href="">Résumé ▼</a></div>
+            <div class="about-button"><a href="https://github.com/Sanbroh" target="_blank">GitHub</a></div>
+            <div class="about-button"><a href="https://devpost.com/Sanbroh" target="_blank">Devpost</a></div>
+            <div class="about-button"><a href="./files/Kevin_Liang_CV.pdf" target="_blank">Résumé ▼</a></div>
           </div>
         </div>
       </div>
