Fixed mobile and scroll measurements, now responsive

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="image-wrapper">
         <div class="bg-image bg-image-main"></div>
       </div>
-      <div class="intro">
+      <div class="intro" id="intro">
         <h1 class="fade-in-fast">Hello! My name is <a class="emphasis floating" onclick="goToMe()">Kevin Liang.</a></h1>
         <h1>
           <a class="typewrite fade-in-med" data-period="2000" data-type='[ "I love coding.", "I love designing.", "I love learning.", "I love innovating.", "I love everything." ]'>
@@ -70,7 +70,7 @@
       <div class="background-text">
         <p id="bg-title">Projects</p>
       </div>
-      <div class="projects">
+      <div class="projects" id="projects">
         <div class="container-wrapper">
             <div class="project-box left">
               <div class="project-bg">
@@ -79,13 +79,13 @@
                   <h3>Coffii <span class="Subtitle">(QHacks 2021)</span></h3>
                   <h4 class="bolder">HTML | CSS | JavaScript</h4>
                   <p>Coffii is a web application that simulates the feeling of sitting inside your favourite coffee shops, restaurants, and public places.</p>
-                  <div class="project-button"><a href="">Visit Project »</a></div>
+                  <div class="project-button"><a href="https://github.com/Sanbroh/Coffii-QHacks-2021" target="_blank">Visit Project »</a></div>
                 </div>
               </div>
             </div>
             <div class="project-box right">
               <div class="project-bg">
-                <div class="project-image" id="project-2"></div>
+                <div class="project-image" id="project-2" onclick="getPositionXY(this)"></div>
                 <div class="project-text">
                   <h3>Loco <span class="Subtitle">(QTMA 2021)</span></h3>
                   <h4 class="bolder">React Native | Firebase</h4>
@@ -112,7 +112,7 @@
                   <h3>Design Project <span class="Subtitle">(APSC200)</span></h3>
                   <h4 class="bolder">MATLAB</h4>
                   <p>Optimization of Uber Eats services in Kingston, Ontario. Uses Lloyd's Algorithm to allocate drivers.</p>
-                  <div class="project-button"><a href="">Visit Project »</a></div>
+                  <div class="project-button"><a href="https://github.com/Sanbroh/uberEatsOptimization" target="_blank">Visit Project »</a></div>
                 </div>
               </div>
             </div>
@@ -126,7 +126,7 @@
             </div>
         </div>
       </div>
-      <div class="about-me">
+      <div class="about-me" id="about-me">
         <div class="left-box">
           <div class="portrait"></div>
         </div>
@@ -142,11 +142,13 @@
             </ul>
           </div>
           <div class="about-buttons">
-            <div class="about-button"><a href="https://github.com/Sanbroh" target="_blank">GitHub</a></div>
-            <div class="about-button"><a href="https://devpost.com/Sanbroh" target="_blank">Devpost</a></div>
-            <div class="about-button"><a href="./files/Kevin_Liang_CV.pdf" target="_blank">Résumé ▼</a></div>
+            <div class="about-button"><a href="">Contact Me</a></div>
+            <div class="about-button"><a href="./files/Kevin_Liang_CV.pdf" target="_blank">Resumé ▼</a></div>
           </div>
         </div>
+      </div>
+      <div class="contacts">
+
       </div>
     </div>
 
