Fixed mail button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="topnav fixed" id="topnav">
         <i id="navmenu" class="material-icons lighter" onclick="toggleMenuOn()">menu</i>
         <h1 id="navtext" class="lighter">Welcome</h1>
-        <i id="to-contact" class="material-icons lighter">mail_outline</i>
+        <i id="to-contact" class="material-icons lighter" onclick="goTo(4)">mail_outline</i>
       </div>
     </header>
 
