Fixed welcome button not closing info menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>Navigation</h3>
         <hr>
         <div class="info-nav-item">
-          <h4 class="lighter" onclick="topFunction()">Welcome</h4>
+          <h4 class="lighter" onclick="goTo(1)">Welcome</h4>
           <h4 class="lighter" onclick="goTo(2)">Projects</h4>
           <h4 class="lighter" onclick="goTo(3)">About</h4>
           <h4 class="lighter" onclick="goTo(4)">Contact Me</h4>
