--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="resources/style.css" type="text/css" rel="stylesheet" />
 <link href="resources/base.css" type="text/css" rel="stylesheet" />
 <link href="resources/animation.css" type="text/css" rel="stylesheet" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <!-- <script src="path/to/dist/feather.js"></script> -->
 <script src="js/script.js"></script>
 <script src="js/animation.js"></script>
