Updated project 1 to scannAR

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
               <div class="project-bg">
                 <div class="project-image" id="project-1"></div>
                 <div class="project-text">
-                  <h3>Coffii <span class="Subtitle">(QHacks 2021)</span></h3>
-                  <h4 class="bolder">HTML | CSS | JavaScript</h4>
-                  <p>Coffii is a web application that simulates the feeling of sitting inside your favourite coffee shops, restaurants, and public places.</p>
-                  <div class="project-button"><a href="https://github.com/Sanbroh/Coffii-QHacks-2021" target="_blank">Visit Project »</a></div>
+                  <h3>scannAR <span class="Subtitle">(QHacks 2022)</span></h3>
+                  <h4 class="bolder">Unity AR</h4>
+                  <p>scannAR is a mobile application that brings URL to IRL through AR technologies, it uses the Unity AR foundation.</p>
+                  <div class="project-button"><a href="https://devpost.com/software/scannar" target="_blank">Visit Project »</a></div>
                 </div>
               </div>
             </div>
@@ -101,7 +101,7 @@
                 <div class="project-text">
                   <h3>Hyperloop Pod Chassis <span class="Subtitle">(QHDT 2022)</span></h3>
                   <h4 class="bolder">SolidWorks CAD</h4>
-                  <p>Chassis of the QHDT Pod that competed in the Canadian Hyperloop Competition at the University of Waterloo.</p>
+                  <p>Chassis of the QHDT Pod that would compete in the Canadian Hyperloop Competition at the University of Waterloo.</p>
                   <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
               </div>
@@ -143,7 +143,7 @@
             </ul>
           </div>
           <div class="about-buttons">
-            <div class="about-button"><a href="">Contact Me</a></div>
+            <div class="about-button"><a onclick="goTo(4)">Contact Me</a></div>
             <div class="about-button"><a href="./files/Kevin_Liang_CV.pdf" target="_blank">Resumé ▼</a></div>
           </div>
         </div>
