updated project images

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="project-text">
                   <h3>Hyperloop Pod Chassis <span class="Subtitle">(QHDT 2022)</span></h3>
                   <h4 class="bolder">SolidWorks CAD</h4>
-                  <p>Chassis of the QHDT Pod that would compete in the Canadian Hyperloop Competition at the University of Waterloo.</p>
+                  <p>Chassis of the QHDT Pod that will compete in the Canadian Hyperloop Competition at the University of Waterloo.</p>
                   <div class="project-button"><a href="">Visit Project »</a></div>
                 </div>
               </div>
