--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="project-image" id="project-1"></div>
                 <div class="project-text">
                   <h3>scannAR <span class="Subtitle">(QHacks 2022)</span></h3>
-                  <h4 class="bolder">Unity AR</h4>
+                  <h4 class="bolder">Unity | C#</h4>
                   <p>scannAR is a mobile application that brings URL to IRL through AR technologies, it uses the Unity AR foundation.</p>
                   <div class="project-button"><a href="https://devpost.com/software/scannar" target="_blank">Visit Project »</a></div>
                 </div>
