--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           name="EmailForm">
             <input type="text" size="19" name="ContactName" placeholder="Full Name">
             <textarea name="ContactComment" rows="6" cols="20" placeholder="Your Message"></textarea>
-            <input type="submit" value="SUBMIT" class="contacts-form-submit">
+            <input type="submit" value="SEND" class="contacts-form-submit">
           </form>
         </div>
       </div>
