Replaced Windows OS Icon in toolbox

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <img title="SOLIDWORKS CAD" class="skills-badge" src="https://freepikpsd.com/file/2019/10/logo-solidworks-png-5-Transparent-Images-Free.png" />
         <img title="Autodesk AutoCAD" class="skills-badge" src="https://upload.wikimedia.org/wikipedia/en/e/ec/AutoCAD_2018_icon.png" />
         <img title="Arduino" class="skills-badge" src="https://i.pinimg.com/originals/3e/87/cf/3e87cf4b3a6a124a4e1666e498e598f3.png" />
-        <img title="Windows OS" class="skills-badge" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Windows_logo_-_2012.svg/768px-Windows_logo_-_2012.svg.png" />
+        <img title="Windows OS" class="skills-badge" src="https://www.freeiconspng.com/thumbs/windows-icon-png/cute-ball-windows-icon-png-16.png" />
         <img title="Linux (Ubuntu)" class="skills-badge" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Logo-ubuntu_cof-orange-hex.svg/1200px-Logo-ubuntu_cof-orange-hex.svg.png" />
         <img title="Android" class="skills-badge" src="https://seeklogo.com/images/A/android-icon-logo-DB06FA8B39-seeklogo.com.png" />
       </div>
