Updated resume and change 3rd displayed project

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <h3>Loco <span class="Subtitle">(QTMA 2021)</span></h3>
                   <h4 class="bolder">React Native | Firebase</h4>
                   <p>Loco is a mobile application that makes tourism easy by giving new entertainment, food, and other unique recommendations to users.</p>
-                  <div class="project-button"><a href="">Visit Project »</a></div>
+                  <div class="project-button"><a href="https://www.instagram.com/getloco.app/" target="_blank">Visit Project »</a></div>
                 </div>
               </div>
             </div>
@@ -99,10 +99,10 @@
               <div class="project-bg">
                 <div class="project-image" id="project-3"></div>
                 <div class="project-text">
-                  <h3>Hyperloop Pod Chassis <span class="Subtitle">(QHDT 2022)</span></h3>
-                  <h4 class="bolder">SolidWorks CAD</h4>
-                  <p>Chassis of the QHDT Pod that will compete in the Canadian Hyperloop Competition at the University of Waterloo.</p>
-                  <div class="project-button"><a href="">Visit Project »</a></div>
+                  <h3>ReLeaf <span class="Subtitle">(CalgaryHacks 2022)</span></h3>
+                  <h4 class="bolder">Python | Flask | HTML | CSS | JavaScript | Bootstrap</h4>
+                  <p>A web application powered by machine learning to help you reduce stress and be ready for anything.</p>
+                  <div class="project-button"><a href="https://devpost.com/software/releaf-pz03ri" target="_blank">Visit Project »</a></div>
                 </div>
               </div>
             </div>
