Pre-school MTN Update: Fixed Missing Icons + Remove unused text

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 </div>
               </div>
             </div>
-            <div class="project-gallery">
+            <!-- <div class="project-gallery">
               <h2>Project Gallery</h2>
-            </div>
+            </div> -->
             <div class="project-more">
               <h2>More Projects</h2>
               <div class="project-more-buttons">
@@ -166,9 +166,9 @@
         <img title="Assembly (Nios II)" class="skills-badge" src="https://gitconnected.com/public/images/tutorials/assembly-language" />
         <img title="Microsoft Office" class="skills-badge" src="https://techcommunity.microsoft.com/t5/image/serverpage/image-id/1296i7768C2951837E376/image-size/large?v=v2&px=999" />
         <img title="Unity" class="skills-badge" src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Unity_Hub_Logo.png" />
-        <img title="Twine" class="skills-badge" src="https://twinery.org/homepage/img/logo.svg" />
+        <img title="Twine" class="skills-badge" src="https://www.saashub.com/images/app/service_logos/11/56373148656d/large.png?1530297626" />
         <img title="Git" class="skills-badge" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Git_icon.svg/1024px-Git_icon.svg.png" />
-        <img title="Flask" class="skills-badge" src="https://symbols.getvecta.com/stencil_80/57_flask.918ee46a13.jpg" />
+        <img title="Flask" class="skills-badge" src="https://www.kindpng.com/picc/m/188-1882559_python-flask-hd-png-download.png" />
         <img title="MongoDB" class="skills-badge" src="https://res.cloudinary.com/startup-grind/image/upload/c_fill,dpr_2,f_auto,g_center,q_auto:good/v1/gcs/platform-data-mongodb/events/mon.png" />
         <img title="Express.js" class="skills-badge" src="https://hackr.io/tutorials/learn-express-js/logo/logo-express-js?ver=1557508379" />
         <img title="React.js" class="skills-badge" src="https://ionicframework.com/docs/icons/logo-react-icon.png" />
