Updated LinkedIn links to new

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="info-text fade-in-fast">
-        <h2><a href="https://www.linkedin.com/in/kevin-liang-32b9791aa/" target="_blank">LinkedIn</a></h2>
+        <h2><a href="https://www.linkedin.com/in/keviniang/" target="_blank">LinkedIn</a></h2>
         <h2><a href="https://www.instagram.com/keviniang/" target="_blank">Instagram</a></h2>
         <h2><a href="https://www.facebook.com/" target="_blank">Facebook</a></h2>
         <h2><a href="https://devpost.com/Sanbroh" target="_blank">Devpost</a></h2>
@@ -190,7 +190,7 @@
             <a href="https://www.instagram.com/keviniang/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png"/></a>
           </div>
           <div class="contacts-buttons">
-            <a href="https://www.linkedin.com/in/kevin-liang-32b9791aa/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"/></a>
+            <a href="https://www.linkedin.com/in/keviniang/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"/></a>
           </div>
           <div class="contacts-buttons">
             <a href="https://www.facebook.com/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"/></a>
